# src/main/java/com/github/davidduclam/movietracker/model/MediaType.java
@@ -1,0 +1,18 @@
+package com.github.davidduclam.movietracker.model;
+
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
+
+public enum MediaType {
+    TV, MOVIE;
+
+    @JsonCreator
+    public static MediaType fromJson(String value) {
+        return MediaType.valueOf(value.trim().toUpperCase());
+    }
+
+    @JsonValue
+    public String toJson() {
+        return name().toLowerCase();
+    }
+}
